# cmake_vcpkg_demo

./: .gitignore  CMakeLists.txt  Person.h  main.cpp
src/: Person.cpp  Person.h
